ups video muted

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         }
       }
       function autoPlay() {
-        if (video.pause && video.muted) {
+        if (video.pause) {
           video.play();
           pause.style.display = "initial";
           play.style.display = "none";
